# cloud_snapshot

./: README.md
cloud_snapshot/: CMakeLists.txt  package.xml
cloud_snapshot/include/cloud_snapshot/: cloud_snapshot_server.h
cloud_snapshot/launch/: cloud_snapshot.launch
cloud_snapshot/src/: cloud_snapshot_server.cpp  cloud_snapshot_server_node.cpp
cloud_snapshot_msgs/: CMakeLists.txt  package.xml
cloud_snapshot_msgs/srv/: CloudSnapshot.srv
